<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fl_cancel"
        android:layout_width="40dp"
        android:layout_height="40dp">

        <ImageView
            android:id="@+id/iv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:src="@mipmap/retuer" />

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_applogo"
                android:layout_width="79dp"
                android:layout_height="79dp"
                android:layout_marginTop="45dp"
                android:src="@mipmap/app_logo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/et_account"
                style="@style/InputEditStyles"
                android:layout_marginTop="67dp"
                android:drawableLeft="@mipmap/cell_phone_number"
                android:drawableStart="@mipmap/cell_phone_number"
                android:hint="@string/please_input_phone"
                android:inputType="number"
                android:maxLength="11"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_applogo" />


            <View
                android:id="@+id/v_account_line"
                style="@style/InputLineStyles"
                app:layout_constraintLeft_toLeftOf="@+id/et_account"
                app:layout_constraintRight_toRightOf="@+id/et_account"
                app:layout_constraintTop_toBottomOf="@+id/et_account" />

            <EditText
                android:id="@+id/et_verify_code"
                style="@style/InputEditStyles"
                android:layout_marginTop="24dp"
                android:drawableLeft="@mipmap/verification_code"
                android:drawableStart="@mipmap/verification_code"
                android:hint="@string/please_input_verify_code"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/v_account_line" />

            <View
                android:id="@+id/v_verify_code_line"
                style="@style/InputLineStyles"
                app:layout_constraintLeft_toLeftOf="@+id/et_account"
                app:layout_constraintRight_toLeftOf="@id/btn_verify_code"
                app:layout_constraintTop_toBottomOf="@+id/et_verify_code" />

            <Button
                android:id="@+id/btn_verify_code"
                android:layout_width="83dp"
                android:layout_height="28dp"
                android:background="@drawable/selector_btn"
                android:text="@string/send_verify_code"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/et_verify_code"
                app:layout_constraintRight_toRightOf="@+id/v_account_line"
                app:layout_constraintTop_toTopOf="@+id/et_verify_code" />

            <EditText
                android:id="@+id/et_pwd"
                style="@style/InputEditStyles"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="24dp"
                android:drawableLeft="@mipmap/password"
                android:drawableStart="@mipmap/password"
                android:gravity="center_vertical"
                android:hint="@string/password_rule"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/iv_eye"
                app:layout_constraintTop_toBottomOf="@+id/v_verify_code_line" />

            <ImageView
                android:id="@+id/iv_eye"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:src="@mipmap/eye"
                app:layout_constraintBottom_toBottomOf="@+id/et_pwd"
                app:layout_constraintRight_toRightOf="@+id/v_account_line"
                app:layout_constraintTop_toTopOf="@+id/et_pwd" />

            <View
                android:id="@+id/v_pwd_line"
                style="@style/InputLineStyles"
                app:layout_constraintLeft_toLeftOf="@+id/et_account"
                app:layout_constraintRight_toRightOf="@+id/et_account"
                app:layout_constraintTop_toBottomOf="@+id/et_pwd" />

            <Button
                android:id="@+id/btn_reset_password"
                style="@style/BtnStyles"
                android:layout_marginTop="76dp"
                android:text="@string/reset_password"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/v_pwd_line" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</LinearLayout>